@@ -2,4 +2,4 @@
 :MAJOR: 0
 :MINOR: 8
 :PATCH: 4
-:BUILD: '002'
+:BUILD: '003'
